kubernetes/apps/media/piped/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: piped-frontend
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: piped
spec:
  hostnames: ["piped.${SHORT_ROOT_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: piped-frontend
          port: 80
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: piped-backend
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["piped-api.${SHORT_ROOT_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: piped-backend
          port: 8080
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: piped-ytproxy
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["ytproxy.${SHORT_ROOT_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: piped-ytproxy
          port: 8080
